forceVisible issue solved

--- a/AccessAudit/inc/css/AccessAudit.css
+++ b/AccessAudit/inc/css/AccessAudit.css
@@ -3,17 +3,18 @@
 	background:pink;
 	-webkit-filter: url('#pinkish') drop-shadow(0px 0px 2px red) drop-shadow(0px 0px 4px red);
 */
-	--display: inherit !important;
 	--background:lightblue;
 	---webkit-filter: url('#blueish') drop-shadow(0px 0px 2px blue) drop-shadow(0px 0px 4px blue);
-	box-shadow: blue 0px 0px 10px 0px inset;
 	box-shadow: blue 0px 0px 10px 0px;
 }
 
 .AccessAuditHighlight {
 	---webkit-filter: drop-shadow(0px 0px 2px red) drop-shadow(0px 0px 4px red);
-	box-shadow: red 0px 0px 10px 0px inset;
 	box-shadow: red 0px 0px 10px 0px;
+}
+
+.forceVisible {
+	--display: inherit !important;
 }
 
 .AccessAuditHighlight:not[background-image] {
